--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".RadioButtonActivity" />
         <activity android:name=".CheckBoxActivity" />
         <activity android:name=".ImageViewActivity"></activity>
+        <activity android:name="com.vbizhi.ceshi.listview.ListViewActivity"></activity>
     </application>
 
 </manifest>
