--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
         <activity android:name=".CheckBoxActivity" />
         <activity android:name=".ImageViewActivity" />
         <activity android:name=".listview.ListViewActivity" />
-        <activity android:name=".gridview.GridViewActivity"></activity>
+        <activity android:name=".gridview.GridViewActivity" />
+        <activity android:name=".recyclerview.RecyclerViewActivity" />
+        <activity android:name=".recyclerview.LinearRecyclerViewActivity"></activity>
     </application>
 
 </manifest>
